# paper-scout

./: README.md  main.py  pyproject.toml
agent_host/: agent.py  mcp_client.py
llm/: llm_client.py
mcp_servers/: tools.py
mcp_servers/pdf_search/: README.md  pyproject.toml  server.py
mcp_servers/pdf_summarize/: main.py  pyproject.toml  server.py
setup/: config.py  logging_config.py  stream_to_cli.py
